k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp11
  namespace: testapp11

spec:
  replicas: 1

  selector:
    matchLabels:
      app: testapp11

  template:
    metadata:
      labels:
        app: testapp11

    spec:
      containers:
      - name: testapp11

        image: 443407534093.dkr.ecr.us-east-1.amazonaws.com/springboot:testapp11-latest

        ports:
        - containerPort: 8080
