k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp11
  namespace: testapp11

spec:
  selector:
    app: testapp11

  ports:
  - port: 80
    targetPort: 8080

  type: ClusterIP
